[project]
name = "student-scheduler"
version = "0.1.0"
description = "学生講座配置プログラム"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openpyxl>=3.1.0",
    "pulp>=2.7.0",
    "highspy>=1.5.0",
]

[project.scripts]
student-scheduler = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true